--- a/ExampleBot.cfg
+++ b/ExampleBot.cfg
@@ -7,8 +7,7 @@ looks_config = ./appearance.cfg
 python_file = ./ExampleBot.py
 
 # Name of the bot in-game
-name = River Rapids
-
+name = ElkBot
 maximum_tick_rate_preference = 120
 
 requirements_file = ./requirements.txt
@@ -19,10 +18,10 @@ requirements_file = ./requirements.txt
 developer = rivques
 
 # Short description of the bot
-description = new and improved bot using GoslingUtils
+description = 
 
 # Fun fact about the bot
-fun_fact = This bot is obsolete! Now River Rapids uses VirxERLU.
+fun_fact = Elk are the second-largest species of deer, after moose.
 
 # Link to github repository
 github = 
