--- a/ExampleBot.cfg
+++ b/ExampleBot.cfg
@@ -18,7 +18,7 @@ requirements_file = ./requirements.txt
 developer = rivques
 
 # Short description of the bot
-description = 
+description = A bot for 3s with unique teammates and 1s. Untested in 2s.
 
 # Fun fact about the bot
 fun_fact = Elk are the second-largest species of deer, after moose.
