Add link to GitHub repo

--- a/ExampleBot.cfg
+++ b/ExampleBot.cfg
@@ -24,7 +24,7 @@ description = A bot for 3s with unique teammates and 1s. Untested in 2s.
 fun_fact = Elk are the second-largest species of deer, after moose.
 
 # Link to github repository
-github = 
+github = https://github.com/rivques/ElkBot
 
 # Programming language
 language = Python
