--- a/ExampleBot.cfg
+++ b/ExampleBot.cfg
@@ -9,7 +9,7 @@ python_file = ./ExampleBot.py
 # Name of the bot in-game
 name = ElkBot
 maximum_tick_rate_preference = 120
-
+use_virtual_environment = true
 requirements_file = ./requirements.txt
 
 [Details]
